added fillerpics; edited Navbar css

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -41,4 +41,42 @@
 
 #skill-list{
   columns: 2;
+  color: #ffc1cc;
 }
+
+body {
+  background-color: #000000;
+}
+
+h1 {
+  color: #f67b8f;
+}
+
+p {
+  color: #ffc1cc;
+}
+
+.navbar {
+  background-color: #ffc1cc;
+  color:#000000;
+}
+.nav-link {
+  color: #000000;
+}
+.nav-link:hover {
+  color: #fafafa;
+}
+
+.form-check-input:checked {
+  background-color: #f67b8f;
+  border-color: #f67b8f;
+}
+
+.form-switch .form-check-input {
+background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='lightgray'/%3e%3c/svg%3e");
+}
+.form-switch .form-check-input:focus {
+background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='pink'/%3e%3c/svg%3e");
+}
+
+
